--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,13 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+@import '@fontsource/ubuntu';
 
 html,
 body {
-  /* max-width: 1440px;
-  margin: 0 auto; */
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 a {
